<resources>
    <string name="app_name">Backup Alarm Clock</string>
    <string name="alarms_file">File</string>
    <string name="format_file">timeFormat</string>
    <string name="EULA_file">eBoolean</string>
    <string name="alarms">Alarms</string>
    <string name="niggahigga">EU timeformat</string>
    <string name="niggahigga2">US timeformat</string>
    <string name="snooze_repeat">SNOOZE REPEAT</string>
    <string name="alarm_set">Set Alarm</string>
    <string name="toggle_message">TOGGLE MESSAGE</string>
    <string name="alarm_sound_settings">Alarm Sound Settings</string>
    <string name="alarm_settings">Alarm settings</string>
    <string name="message_content">Message content | Settings</string>
    <string name="snooze_settings">Snooze Settings</string>
    <string name="alarm_text">ALARM TEXT</string>
    <string name="done">Done</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="alarm_days">ALARM DAYS</string>
    <string name="stop">Stop</string>
    <string name="snooze">Snooze</string>
    <string name="x">Tee siia midagi ahto Lelegiggul</string>
    <string name="y">Contact</string>
    <string name="set_text_rec"> Set text receivers</string>
    <string name="write_message">WRITE MESSAGE HERE</string>
    <string name="snooze_interval">SNOOZE INTERVAL</string>
    <string name="disabled">Disabled</string>
    <string name="min">1 minute</string>
    <string name="fmin">5 minutes</string>
    <string name="tmin">10 minutes</string>
    <string name="snoozerepeaton">SNOOZE REPEAT IS | ON</string>
    <string name="snoozerepeatoff">SNOOZE REPEAT IS | OFF</string>
    <string name="time">1 time</string>
    <string name="ttimes">3 times</string>
    <string name="tttimes">10 times</string>
    <string name="inftimes">Infinite times</string>
    <string name="alarm_music">Alarm Music</string>
    <string name="alarm_volume">ALARM VOLUME</string>
    <string name="song_name">| Song name |</string>
    <string name="tab2">This is tab 2</string>
    <string name="z">21:34</string>
    <string name="alarm_vibration">TOGGLE VIBRATION</string>

    <string name="Eula">Backup Alarm Clock 1.02
    Copyright (&#169;) 2017 Yellowduck\n\n

    *** END USER LICENSE AGREEMENT ***\n\n

    IMPORTANT: PLEASE READ THIS LICENSE CAREFULLY BEFORE USING THIS SOFTWARE.\n

    \n1. LICENSE\n\n

    By receiving, opening the file package, and/or using Backup Alarm Clock 1.02(Software) containing this software, you agree that this End User User License Agreement(EULA) is a legally binding and valid contract and agree to be bound by it. You agree to abide by the intellectual property laws and all of the terms and conditions of this Agreement.

    Unless you have a different license agreement signed by Yellowduck your use of Backup Alarm Clock 1.02 indicates your acceptance of this license agreement and warranty.

    Subject to the terms of this Agreement, Yellowduck grants to you a limited, non-exclusive, non-transferable license, without right to sub-license, to use Backup Alarm Clock 1.02 in accordance with this Agreement and any other written agreement with Yellowduck. Yellowduck does not transfer the title of Backup Alarm Clock 1.02 to you; the license granted to you is not a sale. This agreement is a binding legal agreement between Yellowduck and the purchasers or users of Backup Alarm Clock 1.02.

    If you do not agree to be bound by this agreement, remove Backup Alarm Clock 1.02 from your phone now and, if applicable, promptly return to Yellowduck by mail any copies of Backup Alarm Clock 1.02 and related documentation and packaging in your possession.

    \n\n2. DISTRIBUTION\n\n

    Backup Alarm Clock 1.02 and the license herein granted shall not be copied, shared, distributed, re-sold, offered for re-sale, transferred or sub-licensed in whole or in part except that you may make one copy for archive purposes only. For information about redistribution of Backup Alarm Clock 1.02 contact Yellowduck.

    \n\n3. USER AGREEMENT\n\n

    \n3.1 Use\n\n

    Your license to use Backup Alarm Clock 1.02 is limited to the number of licenses purchased by you. You shall not allow others to use, copy or evaluate copies of Backup Alarm Clock 1.02.

    \n\n3.2 Use Restrictions\n\n

    You shall use Backup Alarm Clock 1.02 in compliance with all applicable laws and not for any unlawful purpose. Without limiting the foregoing, use, display or distribution of Backup Alarm Clock 1.02 together with material that is pornographic, racist, vulgar, obscene, defamatory, libelous, abusive, promoting hatred, discriminating or displaying prejudice based on religion, ethnic heritage, race, sexual orientation or age is strictly prohibited.

    Each licensed copy of Backup Alarm Clock 1.02 may be used by one user. Use of Backup Alarm Clock 1.02 means that you have loaded, installed, or run Backup Alarm Clock 1.02 on a computer or similar device. If you install Backup Alarm Clock 1.02 onto a multi-user platform, server or network, each and every individual user of Backup Alarm Clock 1.02 must be licensed separately.

    You may make one copy of Backup Alarm Clock 1.02 for backup purposes, providing you only have one copy installed on one computer being used by one person. Other users may not use your copy of Backup Alarm Clock 1.02 . The assignment, sublicense, networking, sale, or distribution of copies of Backup Alarm Clock 1.02 are strictly forbidden without the prior written consent of Yellowduck. It is a violation of this agreement to assign, sell, share, loan, rent, lease, borrow, network or transfer the use of Backup Alarm Clock 1.02. If any person other than yourself uses Backup Alarm Clock 1.02 registered in your name, regardless of whether it is at the same time or different times, then this agreement is being violated and you are responsible for that violation!

    \n\n3.3 Copyright Restriction\n\n

    This Software contains copyrighted material, trade secrets and other proprietary material. You shall not, and shall not attempt to, modify, reverse engineer, disassemble or decompile Backup Alarm Clock 1.02. Nor can you create any derivative works or other works that are based upon or derived from Backup Alarm Clock 1.02 in whole or in part.

    Yellowduck\'s name, logo and graphics file that represents Backup Alarm Clock 1.02 shall not be used in any way to promote products developed with Backup Alarm Clock 1.02 . Yellowduck retains sole and exclusive ownership of all right, title and interest in and to Backup Alarm Clock 1.02 and all Intellectual Property rights relating thereto.

    Everything except the background is Yellowduck\'s property. Therefore this licence does not copyright the background. The background is copyrighted by another party. Yellowduck is allowed to use it for educational purposes.

    Copyright law and international copyright treaty provisions protect all parts of Backup Alarm Clock 1.02, products and services. No program, code, part, image, audio sample, or text may be copied or used in any way by the user except as intended within the bounds of the single user program. All rights not expressly granted hereunder are reserved for Yellowduck.

    \n\n3.4 Limitation of Responsibility\n\n

    You will indemnify, hold harmless, and defend Yellowduck , its employees, agents and distributors against any and all claims, proceedings, demand and costs resulting from or in any way connected with your use of Yellowduck\'s Software.

    In no event (including, without limitation, in the event of negligence) will Yellowduck , its employees, agents or distributors be liable for any consequential, incidental, indirect, special or punitive damages whatsoever (including, without limitation, damages for loss of profits, loss of use, business interruption, loss of information or data, or pecuniary loss), in connection with or arising out of or related to this Agreement, Backup Alarm Clock 1.02 or the use or inability to use Backup Alarm Clock 1.02 or the furnishing, performance or use of any other matters hereunder whether based upon contract, tort or any other theory including negligence.

    Yellowduck\'s entire liability, without exception, is limited to the customers\' reimbursement of the purchase price of the Software (maximum being the lesser of the amount paid by you and the suggested retail price as listed by Yellowduck ) in exchange for the return of the product, all copies, registration papers and manuals, and all materials that constitute a transfer of license from the customer back to Yellowduck.

    \n\n3.5 Warranties\n\n

    Except as expressly stated in writing, Yellowduck makes no representation or warranties in respect of this Software and expressly excludes all other warranties, expressed or implied, oral or written, including, without limitation, any implied warranties of merchantable quality or fitness for a particular purpose.

    \n\n3.6 Governing Law\n\n

    This Agreement shall be governed by the law of the Estonia applicable therein. You hereby irrevocably attorn and submit to the non-exclusive jurisdiction of the courts of Estonia therefrom. If any provision shall be considered unlawful, void or otherwise unenforceable, then that provision shall be deemed severable from this License and not affect the validity and enforceability of any other provisions.

    \n\n3.7 Termination\n\n

    Any failure to comply with the terms and conditions of this Agreement will result in automatic and immediate termination of this license. Upon termination of this license granted herein for any reason, you agree to immediately cease use of Backup Alarm Clock 1.02 and destroy all copies of Backup Alarm Clock 1.02 supplied under this Agreement. The financial obligations incurred by you shall survive the expiration or termination of this license.

    \n\n4. DISCLAIMER OF WARRANTY\n\n

    THIS SOFTWARE AND THE ACCOMPANYING FILES ARE SOLD AS IS AND WITHOUT WARRANTIES AS TO PERFORMANCE OR MERCHANTABILITY OR ANY OTHER WARRANTIES WHETHER EXPRESSED OR IMPLIED. THIS DISCLAIMER CONCERNS ALL FILES GENERATED AND EDITED BY Backup Alarm Clock 1.02 AS WELL.

    \n\n5. CONSENT OF USE OF DATA\n\n

    You agree that Yellowduck may collect and use information gathered in any manner as part of the product support services provided to you, if any, related to Backup Alarm Clock 1.02.Yellowduck may also use this information to provide notices to you which may be of use or interest to you.</string>



</resources>
