<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/hello"
    tools:context="ahto.yellowduck.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:minWidth="200dp"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/colorAccent"
                android:text="@string/snooze_interval"/>


            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp" />

                <RadioButton
                    android:id="@+id/R0"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/disabled" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp" />

                <RadioButton
                    android:textSize="18sp"
                    android:id="@+id/R1"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp" />

                <RadioButton
                    android:id="@+id/R2"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fmin"
                    android:textColor="@color/colorAccent"
                    android:checked="true"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp" />

                <RadioButton
                    android:textSize="18sp"
                    android:id="@+id/R3"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tmin" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="100dp" />



            </RadioGroup>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/colorAccent"
                android:text="@string/snooze_repeat"/>


            <View
                android:layout_width="0dp"
                android:layout_height="45dp" />


            <RadioGroup
                android:id="@+id/radiofex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="45dp" />

                <RadioButton
                    android:id="@+id/x4"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/time" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp" />

                <RadioButton
                    android:textSize="18sp"
                    android:id="@+id/x3"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ttimes" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp" />

                <RadioButton
                    android:id="@+id/x2"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tttimes"
                    android:textColor="@color/colorAccent"
                    android:checked="true"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="50dp" />
            </RadioGroup>




            <Button
                android:text="@string/done"
                android:background="@drawable/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/snoozeDone"
                android:layout_marginBottom="14dp" />




        </LinearLayout>
    </ScrollView>


</RelativeLayout>