<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/hello"
    android:keepScreenOn="true">


    <TextClock
        android:layout_width="320dp"
        android:gravity="center"
        android:textSize="64dp"
        android:layout_height="240dp"
        android:layout_marginTop="63dp"
        android:id="@+id/textClock2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/stop"
        android:background="@drawable/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stop"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textClock2"
        android:layout_marginStart="26dp"
        android:layout_marginBottom="59dp" />

    <TextView
        android:text="@string/x"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textColor="@color/colorAccent"
        android:id="@+id/start"
        android:layout_alignBottom="@+id/textClock2"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/snooze"
        android:background="@drawable/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/snooze"
        android:layout_marginEnd="27dp"
        android:layout_alignBaseline="@+id/stop"
        android:layout_alignBottom="@+id/stop"
        android:layout_alignEnd="@+id/textClock2" />

</RelativeLayout>