<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/hello"
    tools:context="ahto.yellowduck.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:minHeight="400dp"
            android:weightSum="1">

            <View
                android:layout_width="0dp"
                android:layout_height="50dp" />


            <EditText
                android:fontFamily="sans-serif-medium"
                android:textSize="18sp"
                android:paddingStart="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage"
                android:background="@drawable/buttonbottomborder"
                android:hint="@string/write_message"
                android:ems="10"
                android:id="@+id/editText4" />

            <View
                android:layout_width="0dp"
                android:layout_height="50dp" />

            <Button
                android:fontFamily="sans-serif-medium"
                android:text="@string/set_text_rec"
                android:textSize="18sp"
                android:paddingStart="24dp"
                android:gravity="center_vertical|start"
                android:background="@drawable/done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ContactsList" />

            <View
                android:layout_width="0dp"
                android:layout_height="50dp" />









<!-- igaks juhuks -->


            <TextView
                android:paddingStart="12dp"
                android:text="@string/y"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

            <View
                android:layout_width="0dp"
                android:layout_height="50dp" />

            <Button
                android:text="@string/done"
                android:background="@drawable/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/done2"
                android:layout_marginStart="128dp"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="30dp" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
