<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:background="@drawable/hello"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="ahto.yellowduck.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:minWidth="200dp"
            android:weightSum="1">

            <ImageButton
                android:background="#00ffffff"
                android:textColor="@color/colorPrimary"
                android:scaleType="fitXY"
                android:id="@+id/tagasi"
                android:layout_width="40dp"
                android:layout_height="32dp"
                app:srcCompat="?android:attr/actionModeCloseDrawable"
                android:padding="-40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="0.35" />


            <Button
                android:text="@string/alarm_set"
                android:textSize="18sp"
                android:background="@drawable/buttonbottomborder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="-32dp"
                android:id="@+id/jalg" />


            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TimePicker
                android:timePickerMode="spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/timePicker"
                android:layout_marginTop="50dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1" />

            <Switch
                android:fontFamily="sans-serif-medium"
                android:background="@drawable/mainactivitybuttons"
                android:text="@string/toggle_message"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:paddingEnd="12dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:paddingStart="24dp"
                android:layout_height="48dp"
                android:id="@+id/togglemessage" />

            <View
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1" />

            <Button
                android:fontFamily="sans-serif-medium"
                android:text="@string/alarm_sound_settings"
                android:textSize="16sp"
                android:paddingStart="24dp"
                android:gravity="center_vertical|start"
                android:background="@drawable/mainactivitybuttons"
                android:foreground="@drawable/rippleeffecteraldi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/musicbutton" />

            <View
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1" />

            <Button
                android:fontFamily="sans-serif-medium"
                android:text="@string/alarm_settings"
                android:textSize="16sp"
                android:paddingStart="24dp"
                android:gravity="center_vertical|start"
                android:background="@drawable/mainactivitybuttons"
                android:foreground="@drawable/rippleeffecteraldi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Alarmtime" />

            <View
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1" />


            <Button
                android:fontFamily="sans-serif-medium"
                android:textSize="16sp"
                android:text="@string/message_content"
                android:paddingStart="24dp"
                android:gravity="center_vertical|start"
                android:background="@drawable/mainactivitybuttons"
                android:foreground="@drawable/rippleeffecteraldi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/messagecontent" />



            <View
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1" />


            <Button
                android:fontFamily="sans-serif-medium"
                android:textSize="16sp"
                android:text="@string/snooze_settings"
                android:paddingStart="24dp"
                android:gravity="center_vertical|start"
                android:background="@drawable/mainactivitybuttons"
                android:foreground="@drawable/rippleeffecteraldi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/setSnooze" />

            <View
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1" />

            <ImageButton
                app:srcCompat="@android:drawable/ic_menu_delete"
                android:id="@+id/kustuta"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:textColor="@color/colorPrimary"
                android:tint="#00FF00"
                android:scaleType="fitCenter"
                android:layout_width="60dp"
                android:layout_height="32dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1" />


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
